discount section responsive done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="banner container">
             <div class="banner-text">
                 <h3 class="banner-title">Let's make beautiful flowers a part of your life.</h3>
@@ -22,9 +22,9 @@
                 <img src="images/pngwing 10.png" alt="image" srcset="">
             </div>
         </div>
-    </header>
+    </header> -->
     <main>
-        <section class="container features-mt">
+        <!-- <section class="container features-mt ">
             <h3 class="features-title title">Our Featured Flowers</h3>
             <p class="features-description">It is a long established fact that a reader will be distracted by the
                 readable content of a page when looking at its layout.</p>
@@ -51,13 +51,9 @@
 
             </div>
 
-        </section>
-
-        <section class="support-sec-container container common-mt">
-
+        </section> -->
+        <!-- <section class="support-sec-container container common-mt">
             <div class="support-container">
-
-
                 <div class="support-items">
                     <img src="images/Group 57.png" alt="" class="support-delevery">
                     <h3 class="support-title">Same Day Delivery. Click & Collect.</h3>
@@ -72,18 +68,23 @@
                     <img src="images/Group 59.png" alt="" class="support-delevery">
                     <h3 class="support-title">24/7 Free Support.</h3>
                 </div>
-
             </div>
+        </section> -->
 
-        </section>
-
-        <section class="discount-section common-mt">
+        <section class="discount-section common-mt ">
             <div class="discount-container">
                 <div class="discount-content-container">
-                    <h3 class="discount-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
-                    <p class="discount-description">It is a long established fact that a reader will be distracted by
-                        the readable content of a page when looking at its layout.</p>
-                    <button class="btn discount-btn" type="button">Sign Up</button>
+
+                    <div>
+                        <h3 class="discount-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                    </div>
+                    <div>
+                        <p class="discount-description">It is a long established fact that a reader will be distracted
+                            by
+                            the readable content of a page when looking at its layout.</p>
+                    </div>
+                    <div> <button class="btn discount-btn" type="button">Sign Up</button></div>
+
                 </div>
                 <div class="discount-image-container">
                     <img src="images/pngwing 8.png" alt="" srcset="">
@@ -92,7 +93,7 @@
             </div>
         </section>
 
-        <section class="instagram container common-mt">
+        <!-- <section class="instagram container common-mt">
             <h3 class="instagram-title title">Instagram</h3>
             <p class="instagram-description">It is a long established fact that a reader will be distracted by the
                 readable content of a page when looking at its layout.</p>
@@ -102,9 +103,9 @@
                 <img src="images/Rectangle 5.png" alt="">
                 <img src="images/Rectangle 6.png" alt="">
             </div>
-        </section>
+        </section> -->
 
-        <section class="subscribe container common-mt">
+        <!-- <section class="subscribe container common-mt">
             <h3 class="subscribe-title title">Get The Latest Deals</h3>
             <h3 class="subscribe-description">$30 coupon for first shopping</h3>
 
@@ -112,9 +113,9 @@
                 <input type="email" placeholder="Enter your email here" name="" id="">
                 <button type="button" class="btn">Subscribe</button>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="common-mt footer-section">
+    <!-- <footer class="common-mt footer-section">
         <div class="footer-container">
 
             <h3 class="footer-title">Flower <span>Shop</span></h3>
@@ -126,7 +127,7 @@
         </div>
 
 
-    </footer>
+    </footer> -->
 </body>
 
 </html>
