subscriber section responsive done

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </section> -->
 
-        <section class="discount-section common-mt ">
+        <!-- <section class="discount-section common-mt ">
             <div class="discount-container">
                 <div class="discount-content-container">
 
@@ -91,7 +91,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
         <!-- <section class="instagram container common-mt">
             <h3 class="instagram-title title">Instagram</h3>
@@ -104,8 +104,7 @@
                 <img src="images/Rectangle 6.png" alt="">
             </div>
         </section> -->
-
-        <!-- <section class="subscribe container common-mt">
+        <section class="subscribe container common-mt">
             <h3 class="subscribe-title title">Get The Latest Deals</h3>
             <h3 class="subscribe-description">$30 coupon for first shopping</h3>
 
@@ -113,7 +112,7 @@
                 <input type="email" placeholder="Enter your email here" name="" id="">
                 <button type="button" class="btn">Subscribe</button>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- <footer class="common-mt footer-section">
         <div class="footer-container">
