--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <div class="banner container">
             <div class="banner-text">
                 <h3 class="banner-title">Let's make beautiful flowers a part of your life.</h3>
@@ -22,9 +22,9 @@
                 <img src="images/pngwing 10.png" alt="image" srcset="">
             </div>
         </div>
-    </header> -->
+    </header>
     <main>
-        <!-- <section class="container features-mt ">
+        <section class="container features-mt ">
             <h3 class="features-title title">Our Featured Flowers</h3>
             <p class="features-description">It is a long established fact that a reader will be distracted by the
                 readable content of a page when looking at its layout.</p>
@@ -51,8 +51,8 @@
 
             </div>
 
-        </section> -->
-        <!-- <section class="support-sec-container container common-mt">
+        </section>
+        <section class="support-sec-container container common-mt">
             <div class="support-container">
                 <div class="support-items">
                     <img src="images/Group 57.png" alt="" class="support-delevery">
@@ -69,9 +69,9 @@
                     <h3 class="support-title">24/7 Free Support.</h3>
                 </div>
             </div>
-        </section> -->
+        </section>
 
-        <!-- <section class="discount-section common-mt ">
+        <section class="discount-section common-mt ">
             <div class="discount-container">
                 <div class="discount-content-container">
 
@@ -91,9 +91,9 @@
                 </div>
 
             </div>
-        </section> -->
+        </section>
 
-        <!-- <section class="instagram container common-mt">
+        <section class="instagram container common-mt">
             <h3 class="instagram-title title">Instagram</h3>
             <p class="instagram-description">It is a long established fact that a reader will be distracted by the
                 readable content of a page when looking at its layout.</p>
@@ -103,7 +103,7 @@
                 <img src="images/Rectangle 5.png" alt="">
                 <img src="images/Rectangle 6.png" alt="">
             </div>
-        </section> -->
+        </section>
         <section class="subscribe container common-mt">
             <h3 class="subscribe-title title">Get The Latest Deals</h3>
             <h3 class="subscribe-description">$30 coupon for first shopping</h3>
@@ -114,19 +114,15 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="common-mt footer-section">
+    <footer class="common-mt footer-section">
         <div class="footer-container">
-
             <h3 class="footer-title">Flower <span>Shop</span></h3>
             <h3 class="description">It is a long established fact that a reader will be distracted by the readable
                 content
                 of a page when looking at its layout.</h3>
             <h3 class="reserved">@2020-2023, FlowerShop.com. All rights reserved. </h3>
-
         </div>
-
-
-    </footer> -->
+    </footer>
 </body>
 
 </html>
